grammar/NN_SimulatorParser.java
// Generated from NN_Simulator.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NN_SimulatorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, WS=56, COMMENTS=57, INT=58, FLOAT=59, STRING=60;
	public static final int
		RULE_main_program = 0, RULE_structure = 1, RULE_input_layer = 2, RULE_hidden_layer = 3, 
		RULE_weights = 4, RULE_add_hidden = 5, RULE_add_weights = 6, RULE_add_function = 7, 
		RULE_output_layer = 8, RULE_output_conf = 9, RULE_output_function = 10, 
		RULE_output_error = 11, RULE_general_conf = 12, RULE_epochs = 13, RULE_learning_rate = 14, 
		RULE_execute = 15, RULE_train = 16, RULE_gradient_descent_funct = 17, 
		RULE_block_grad = 18, RULE_gradient_descent_call = 19, RULE_forward_propagate = 20, 
		RULE_backward_propagate = 21, RULE_move_step = 22, RULE_predict = 23, 
		RULE_predict_funct = 24, RULE_block_predict = 25, RULE_predict_call = 26, 
		RULE_float_array = 27, RULE_array_elem = 28, RULE_empty_array = 29;
	public static final String[] ruleNames = {
		"main_program", "structure", "input_layer", "hidden_layer", "weights", 
		"add_hidden", "add_weights", "add_function", "output_layer", "output_conf", 
		"output_function", "output_error", "general_conf", "epochs", "learning_rate", 
		"execute", "train", "gradient_descent_funct", "block_grad", "gradient_descent_call", 
		"forward_propagate", "backward_propagate", "move_step", "predict", "predict_funct", 
		"block_predict", "predict_call", "float_array", "array_elem", "empty_array"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'input_layer'", "'('", "')'", "';'", "'hidden_layers'", "'weights'", 
		"'.'", "'add_layer'", "'add_random_matrix'", "','", "'['", "']'", "'function'", 
		"'output_layer'", "'error'", "'epochs'", "'='", "'alpha'", "'gradient_descent'", 
		"'x'", "'W'", "'activations'", "'iterations'", "'{'", "'}'", "'layers'", 
		"'join'", "'z_1'", "'*'", "'w_1'", "'a_1'", "'f[1]'", "'for'", "'i'", 
		"'in'", "'2...num_layers'", "'z_i'", "'a_{i-1}'", "'w_i'", "'a_i'", "'f[i]'", 
		"'loss'", "'y'", "'-'", "'a_{num_layers}'", "'**'", "'2'", "'j'", "'num_layers...1'", 
		"'a_i-1'", "'w_2'", "'iteration'", "'predict'", "'return'", "'activationS'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "WS", "COMMENTS", "INT", 
		"FLOAT", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NN_Simulator.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NN_SimulatorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Main_programContext extends ParserRuleContext {
		public StructureContext structure() {
			return getRuleContext(StructureContext.class,0);
		}
		public General_confContext general_conf() {
			return getRuleContext(General_confContext.class,0);
		}
		public ExecuteContext execute() {
			return getRuleContext(ExecuteContext.class,0);
		}
		public Main_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterMain_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitMain_program(this);
		}
	}

	public final Main_programContext main_program() throws RecognitionException {
		Main_programContext _localctx = new Main_programContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			structure();
			setState(61);
			general_conf();
			setState(62);
			execute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureContext extends ParserRuleContext {
		public Input_layerContext input_layer() {
			return getRuleContext(Input_layerContext.class,0);
		}
		public Hidden_layerContext hidden_layer() {
			return getRuleContext(Hidden_layerContext.class,0);
		}
		public Output_layerContext output_layer() {
			return getRuleContext(Output_layerContext.class,0);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitStructure(this);
		}
	}

	public final StructureContext structure() throws RecognitionException {
		StructureContext _localctx = new StructureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_structure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			input_layer();
			setState(65);
			hidden_layer();
			setState(66);
			output_layer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_layerContext extends ParserRuleContext {
		public Float_arrayContext float_array() {
			return getRuleContext(Float_arrayContext.class,0);
		}
		public Input_layerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_layer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterInput_layer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitInput_layer(this);
		}
	}

	public final Input_layerContext input_layer() throws RecognitionException {
		Input_layerContext _localctx = new Input_layerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_input_layer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__0);
			setState(69);
			match(T__1);
			setState(70);
			float_array();
			setState(71);
			match(T__2);
			setState(72);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hidden_layerContext extends ParserRuleContext {
		public Empty_arrayContext empty_array() {
			return getRuleContext(Empty_arrayContext.class,0);
		}
		public WeightsContext weights() {
			return getRuleContext(WeightsContext.class,0);
		}
		public Add_hiddenContext add_hidden() {
			return getRuleContext(Add_hiddenContext.class,0);
		}
		public Hidden_layerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hidden_layer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterHidden_layer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitHidden_layer(this);
		}
	}

	public final Hidden_layerContext hidden_layer() throws RecognitionException {
		Hidden_layerContext _localctx = new Hidden_layerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_hidden_layer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__4);
			setState(75);
			match(T__1);
			setState(76);
			empty_array();
			setState(77);
			match(T__2);
			setState(78);
			match(T__3);
			setState(79);
			weights();
			setState(80);
			add_hidden();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WeightsContext extends ParserRuleContext {
		public Empty_arrayContext empty_array() {
			return getRuleContext(Empty_arrayContext.class,0);
		}
		public WeightsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weights; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterWeights(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitWeights(this);
		}
	}

	public final WeightsContext weights() throws RecognitionException {
		WeightsContext _localctx = new WeightsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_weights);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__5);
			setState(83);
			match(T__1);
			setState(84);
			empty_array();
			setState(85);
			match(T__2);
			setState(86);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_hiddenContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(NN_SimulatorParser.INT, 0); }
		public Add_weightsContext add_weights() {
			return getRuleContext(Add_weightsContext.class,0);
		}
		public Add_functionContext add_function() {
			return getRuleContext(Add_functionContext.class,0);
		}
		public Add_hiddenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_hidden; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterAdd_hidden(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitAdd_hidden(this);
		}
	}

	public final Add_hiddenContext add_hidden() throws RecognitionException {
		Add_hiddenContext _localctx = new Add_hiddenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_add_hidden);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				match(T__4);
				setState(89);
				match(T__6);
				setState(90);
				match(T__7);
				setState(91);
				match(T__1);
				setState(92);
				match(INT);
				setState(93);
				match(T__2);
				setState(94);
				match(T__3);
				setState(95);
				add_weights();
				setState(96);
				add_function();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_weightsContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(NN_SimulatorParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(NN_SimulatorParser.INT, i);
		}
		public Add_weightsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_weights; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterAdd_weights(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitAdd_weights(this);
		}
	}

	public final Add_weightsContext add_weights() throws RecognitionException {
		Add_weightsContext _localctx = new Add_weightsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_add_weights);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__5);
			setState(102);
			match(T__6);
			setState(103);
			match(T__8);
			setState(104);
			match(T__1);
			setState(105);
			match(INT);
			setState(106);
			match(T__9);
			setState(107);
			match(INT);
			setState(108);
			match(T__2);
			setState(109);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_functionContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(NN_SimulatorParser.INT, 0); }
		public TerminalNode STRING() { return getToken(NN_SimulatorParser.STRING, 0); }
		public Add_hiddenContext add_hidden() {
			return getRuleContext(Add_hiddenContext.class,0);
		}
		public Add_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterAdd_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitAdd_function(this);
		}
	}

	public final Add_functionContext add_function() throws RecognitionException {
		Add_functionContext _localctx = new Add_functionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_add_function);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				match(T__4);
				setState(112);
				match(T__10);
				setState(113);
				match(INT);
				setState(114);
				match(T__11);
				setState(115);
				match(T__6);
				setState(116);
				match(T__12);
				setState(117);
				match(T__1);
				setState(118);
				match(STRING);
				setState(119);
				match(T__2);
				setState(120);
				match(T__3);
				setState(121);
				add_hidden();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				add_hidden();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Output_layerContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(NN_SimulatorParser.INT, 0); }
		public Output_confContext output_conf() {
			return getRuleContext(Output_confContext.class,0);
		}
		public Output_layerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_layer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterOutput_layer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitOutput_layer(this);
		}
	}

	public final Output_layerContext output_layer() throws RecognitionException {
		Output_layerContext _localctx = new Output_layerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_output_layer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__13);
			setState(126);
			match(T__1);
			setState(127);
			match(INT);
			setState(128);
			match(T__2);
			setState(129);
			match(T__3);
			setState(130);
			output_conf();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Output_confContext extends ParserRuleContext {
		public Output_functionContext output_function() {
			return getRuleContext(Output_functionContext.class,0);
		}
		public Output_errorContext output_error() {
			return getRuleContext(Output_errorContext.class,0);
		}
		public Output_confContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_conf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterOutput_conf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitOutput_conf(this);
		}
	}

	public final Output_confContext output_conf() throws RecognitionException {
		Output_confContext _localctx = new Output_confContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_output_conf);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				output_function();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				output_error();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Output_functionContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(NN_SimulatorParser.STRING, 0); }
		public Output_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterOutput_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitOutput_function(this);
		}
	}

	public final Output_functionContext output_function() throws RecognitionException {
		Output_functionContext _localctx = new Output_functionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_output_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__13);
			setState(138);
			match(T__6);
			setState(139);
			match(T__12);
			setState(140);
			match(T__1);
			setState(141);
			match(STRING);
			setState(142);
			match(T__2);
			setState(143);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Output_errorContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(NN_SimulatorParser.STRING, 0); }
		public Output_errorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_error; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterOutput_error(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitOutput_error(this);
		}
	}

	public final Output_errorContext output_error() throws RecognitionException {
		Output_errorContext _localctx = new Output_errorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_output_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__13);
			setState(146);
			match(T__6);
			setState(147);
			match(T__14);
			setState(148);
			match(T__1);
			setState(149);
			match(STRING);
			setState(150);
			match(T__2);
			setState(151);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class General_confContext extends ParserRuleContext {
		public EpochsContext epochs() {
			return getRuleContext(EpochsContext.class,0);
		}
		public Learning_rateContext learning_rate() {
			return getRuleContext(Learning_rateContext.class,0);
		}
		public General_confContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_general_conf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterGeneral_conf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitGeneral_conf(this);
		}
	}

	public final General_confContext general_conf() throws RecognitionException {
		General_confContext _localctx = new General_confContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_general_conf);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				epochs();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				learning_rate();
				}
				break;
			case EOF:
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EpochsContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(NN_SimulatorParser.INT, 0); }
		public EpochsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_epochs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterEpochs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitEpochs(this);
		}
	}

	public final EpochsContext epochs() throws RecognitionException {
		EpochsContext _localctx = new EpochsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_epochs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(T__15);
			setState(159);
			match(T__16);
			setState(160);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Learning_rateContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(NN_SimulatorParser.FLOAT, 0); }
		public Learning_rateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_learning_rate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterLearning_rate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitLearning_rate(this);
		}
	}

	public final Learning_rateContext learning_rate() throws RecognitionException {
		Learning_rateContext _localctx = new Learning_rateContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_learning_rate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__17);
			setState(163);
			match(T__16);
			setState(164);
			match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExecuteContext extends ParserRuleContext {
		public TrainContext train() {
			return getRuleContext(TrainContext.class,0);
		}
		public PredictContext predict() {
			return getRuleContext(PredictContext.class,0);
		}
		public ExecuteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterExecute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitExecute(this);
		}
	}

	public final ExecuteContext execute() throws RecognitionException {
		ExecuteContext _localctx = new ExecuteContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_execute);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				train();
				setState(167);
				predict();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TrainContext extends ParserRuleContext {
		public Gradient_descent_functContext gradient_descent_funct() {
			return getRuleContext(Gradient_descent_functContext.class,0);
		}
		public Gradient_descent_callContext gradient_descent_call() {
			return getRuleContext(Gradient_descent_callContext.class,0);
		}
		public TrainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_train; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).enterTrain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NN_SimulatorListener ) ((NN_SimulatorListener)listener).exitTrain(this);
		}
	}

	public final TrainContext train() throws RecognitionException {
		TrainContext _localctx = new TrainContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_train);
		try {
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(172);
				gradient_descent_funct();
				setState(173);
				gradient_descent_call();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
